[ISSUE-163] optimize default JVM options